tests/neg/i2292.scala
package foo+ // error

class Foo
